--- a/3. 자바와 객체 지향.md
+++ b/3. 자바와 객체 지향.md
@@ -16,7 +16,7 @@
 * 다 - 다형성:사용편의
 
 ### 클래스 vs. 객체
-클래스는 분휴에 대한 개념이지 실체가 아니다. 객체는 실체다.<br/>
+클래스는 분류에 대한 개념이지 실체가 아니다. 객체는 실체다.<br/>
 ```
 붕어빵틀 붕어빵 = new 붕어빵틀(); (X)
 ```
@@ -86,11 +86,12 @@
 * 하위 클래스 쪽으로 갈수록 구체화, 특수화
 * 상속의 개념은 분류도이다.(조직도나 계층도(X))
 
-> 자바 언어에서 inheritance(상속)라는 키워드는 존재하지 않는다. 대신 extends(확장)가 존재한다.
+> 자바 언어에서 inheritance(상속)라는 키워드는 존재하지 않는다. 대신 extends(확장)가 존재한다.<br/>
 > 상위 클래스 와 하위 클래스는 is a 관계가 아닌 is a kind of 관계다.
+<hr/>
 
 ### 다중 상속과 자바
-자바는 다중 상속의 다이아몬드 문제로 인해 득실 관계에서 실이 더 많았기에 다중 상속을 포기했다.
+자바는 다중 상속의 다이아몬드 문제로 인해 득실 관계에서 실이 더 많았기에 다중 상속을 포기했다.<br/>
 대신 인터페이스를 도입해 다중 상속의 득은 취하고 실은 과감히 버렸다.
 
 * 인터페이스: 구현 클래스 is able to 인터페이스
@@ -100,4 +101,53 @@
 * Comparable 인터페이스: 비교할 수 있는
 * Runnable 인터페이스: 실행할 수 있는
 > 인터페이스는 "무엇을 할 수 있는"이라는 표현 형태로 만드는 것이 좋다.
+<hr/>
+
+### 상속과 T 메모리
+하위클래스의 인스턴스가 생성될 때 상위 클래스의 인스턴스도 함께 생성된다. (Object 클래스의 인스턴스까지)
+<hr/>
+
+### 다형성: 사용편의성
+* 오버라이딩 : 같은 메서드 이름, 같은 인자 목록으로 상위 클래스의 메서드를 재정의
+* 오버로딩 : 같은 메서드 이름, 다른 인자 목록으로 다수의 메서드를 중복 정의
+<hr/>
+
+### 다형성과 T 메모리
+```
+Animal pingu = new Penguin();
+pungu.showName();
+```
+pingu 객체 참조 변수는 타입이 Animal 이지만 Animal 객체의 showName()은 Penguin 객체의 showName()에 의해 가려져 있다.
+
+> 상위 클래스 타입의 객체 참조 변수를 사용하더라도 하위 클래스에서 오버라이딩(재정의)한 메서드가 호출됨.<br/>
+> (Penguin클래스의 showName메서드가 호출됨)
+
+* 오버로딩은 함수명 하나를 가지고 인자 목록만 달리하면 되니 사용하기 편리하다.<br/>
+* 제네릭을 이용하면 하나의 함수만 구현해도 다수의 함수를 구현한 효과를 낼 수 있다.<br/>
+* 다형성에 대해 사용 편의성이라고 정의한 이유는 이 때문이다.
+* 오버라이딩의 경우에도 하위 클래스가 재정의한 메서드를 알아서 호출해 줌으로써 형변환이나 instanceof 연산자를 써서 하위 클래스가 무엇인지 신경 쓰지 않아도 된다. (상위 클래스 타입의 객체 참조 변수에서 하위 클래스가 오버라이딩한 메서드를 자동으로 호출해 준다.)
+<hr/>
+
+### 캡슐화: 정보 은닉
+* public - 모두가 접근 가능
+* protected - 상속/ 같은 패키지 내의 클래스에서 접근 가능
+* [default] - 같은 패키지 내의 클래스에서 접근 가능
+* private - 본인만 접근 가능
+※ 두 개의 jar파일 에서 같은 패키지 이름이 있을 때 한 쪽 패키지 내 클래스나 객체에서 다른 한 쪽 패키지 내 클래스나 객체가 가진 public 멤버 뿐만 아니라 [default] 멤버와 protected 멤버에 자유롭게 접근 할 수 있다.
+
+> 상속을 받지 않았다면 객체 멤버는 객체를 생성한 후 객체 참조 변수를 이용해 접근해야 한다.<br/>
+> 정적 멤버는 클래스명.정적멤버 형식으로 접근하는 것을 권장한다.<br/>
+(public 정적 속성이라면 Class.변수, 변수, this.변수로 접근하는 방법이 세 가지나 되어 일관된 형식으로 접근하기 위해서다)<br/>
+(메모리의 물리적 접근에 따른 이유도 있다)
+<hr/>
+
+### 참조 변수의 복사
+* 기본 자료형 변수는 저장하고 있는 값을 그 값 자체로 해석하는 반면, 객체 참조 변수는 저장하고 있는 값을 주소로 해석한다.
+* 같은 주소 값을 참조하고 있는 두 변수는 참조하고 있는 객체의 변화에 함께 영향을 받는다.<br/>(한 쪽 변수에 null이나 다른 객체의 참조를 할당하면 다른 쪽 변수에는 영향을 미치지 못한다.)
+
+> 기본 자료형 변수는 값을 값 자체로 판단한다.<br/>
+> 참조 자료형 변수는 값을 주소, 즉 포인터로 판단한다.<br/>
+> 기본 자료형 변수를 복사할 때, 참조 자료형 변수를 복사할 때 일어나는 일은 같다. 즉, 가지고 있는 값을 그대로 복사해서 넘겨 준다.
+
+### 캡!상추다
 
