docs: 사람을 사랑한 기술 정리

--- a/1. 사람을 사랑한 기술.md
+++ b/1. 사람을 사랑한 기술.md
@@ -5,7 +5,7 @@
 <hr/>
 
 #### 기계어 - 0과 1의 행진 / 너무나 비 인간적인 언어
-기계어코드가 CPU마다 다르다.
+기계어코드가 CPU마다 다르다.<br/>
 2진법을 적용한 세계 최초의 프로그램 내장 방식 전자계산기인 **애드삭**<br/>
 최초의 상업용 컴퓨터인 **유니박**<br/>
 위 두 사이의 1 + 3 의 연산이 다르다.
