--- a/3. 자바와 객체 지향.md
+++ b/3. 자바와 객체 지향.md
@@ -52,7 +52,7 @@
 
 ### 추상화와 T 메모리
 * java.lang 패키지와 모든 클래스들이 T 메모리의 스태틱 영역에 배치된다 하지만 클래스 내에 변수 저장 공간이 만들어 지지 않는다. 그저 이름만 존재한다.<br/>
-* 이 세 개의 속성은 클래스에 속한 속성이 아닌 객체에 속한 속성이기 때문이다.<br/>
+* 클래스에 속한 속성이 아닌 객체에 속한 속성이기 때문이다.<br/>
 * 객체가 생성돼야만 속성의 값을 저장하기 위한 메모리 공간이 스태틱 영역이 아닌 힙 영역에 할당된다.<br/>
 * 클래스 멤버와 객체 멤버를 구분하는 자바 키워드는 static이다.<br/>
 * 객체 생성자를 호출하면 힙 영역에 배치되고 해당 메모리의 시작 주소를 객체 참조 변수에 할당한다.
