docs: 자바와 객체 지향 정리
다중 상속의 다이아몬드 문제 설명 추가

--- a/3. 자바와 객체 지향.md
+++ b/3. 자바와 객체 지향.md
@@ -94,6 +94,9 @@
 자바는 다중 상속의 다이아몬드 문제로 인해 득실 관계에서 실이 더 많았기에 다중 상속을 포기했다.<br/>
 대신 인터페이스를 도입해 다중 상속의 득은 취하고 실은 과감히 버렸다.
 
+※ 다이아몬드 문제 : 같은 구문이 다른 의미로 해석될 여지가 있다.<br/>
+(사람과 물고기를 상속한 인어에게 수영해! 라고 했을때 어떻게 수영할 것인가)
+
 * 인터페이스: 구현 클래스 is able to 인터페이스
 * 해석: 구현 클래스는 인터페이스 할 수 있다.
 * Serializable 인터페이스: 직렬화할 수 있는
