style: 자바와 객체 지향 정리 수정
놓친 줄바꿈 추가

--- a/3. 자바와 객체 지향.md
+++ b/3. 자바와 객체 지향.md
@@ -135,7 +135,7 @@ pingu 객체 참조 변수는 타입이 Animal 이지만 Animal 객체의 showNa
 * public - 모두가 접근 가능
 * protected - 상속/ 같은 패키지 내의 클래스에서 접근 가능
 * [default] - 같은 패키지 내의 클래스에서 접근 가능
-* private - 본인만 접근 가능
+* private - 본인만 접근 가능<br/>
 ※ 두 개의 jar파일 에서 같은 패키지 이름이 있을 때 한 쪽 패키지 내 클래스나 객체에서 다른 한 쪽 패키지 내 클래스나 객체가 가진 public 멤버 뿐만 아니라 [default] 멤버와 protected 멤버에 자유롭게 접근 할 수 있다.
 
 > 상속을 받지 않았다면 객체 멤버는 객체를 생성한 후 객체 참조 변수를 이용해 접근해야 한다.<br/>
