--- a/6. 스프링이 사랑한 디자인 패턴.md
+++ b/6. 스프링이 사랑한 디자인 패턴.md
@@ -110,7 +110,7 @@ public class Singleton {
 ###### 디자인 패턴의 꽃이라고 하는 전략 패턴을 구성하는 세 요소
 * 전략 메서드를 가진 전략 객체
 * 전략 객체를 사용하는 컨텍스트(전략 객체의 사용자/소비자)
-* 전략 객체를 생성해 컨텍스트에 주입하는 클라이언트(제3자, 전략 객체의 공급자)
+* 전략 객체를 생성해 컨텍스트에 주입하는 클라이언트(제3자, 전략 객체의 공급자)<br/>
 예제로 이해하기
 전략 - 무기(총, 칼, 활)<br/>
 컨텍스트 - 군인
