--- a/6. 스프링이 사랑한 디자인 패턴.md
+++ b/6. 스프링이 사랑한 디자인 패턴.md
@@ -110,11 +110,11 @@ public class Singleton {
 ###### 디자인 패턴의 꽃이라고 하는 전략 패턴을 구성하는 세 요소
 * 전략 메서드를 가진 전략 객체
 * 전략 객체를 사용하는 컨텍스트(전략 객체의 사용자/소비자)
-* 전략 객체를 생성해 컨텍스트에 주입하는 클라이언트(제3자, 전략 객체의 공급자)<br/>
-예제로 이해하기
-전략 - 무기(총, 칼, 활)<br/>
-컨텍스트 - 군인
-클라이언트 - 보급장교
+* 전략 객체를 생성해 컨텍스트에 주입하는 클라이언트(제3자, 전략 객체의 공급자)<br/><br/>
+예제로 이해하기<br/>
+* 전략 - 무기(총, 칼, 활)<br/>
+* 컨텍스트 - 군인<br/>
+* 클라이언트 - 보급장교
 > 보급 장교가 무기를 군인에게 지급해 주면 군인은 주어진 무기에 따라 전투를 수행하게 된다.<br/>
 > 전략을 다양하게 변경하면서 컨텍스트를 실행할 수 있다.<br/>
 
