docs: 스프링 삼각형과 설정 정보 정리

--- a/7. 스프링 삼각형과 설정 정보.md
+++ b/7. 스프링 삼각형과 설정 정보.md
@@ -124,7 +124,7 @@ XML 로 표현
 
 ##### @Autowired와 @Resource 중에서는 @Resource 추천
 * 나중에 스프링이 아닌 다른 프레임워크로 교체되는 경우를 대비하면 자바 표준인 @Resource를 쓰는 것이 유리함.
-##### @Resource와 <property> 중에서는 <property> 추천
+##### @Resource와 property 중에서는 property 추천
 * DI 관계를 손쉽게 확인할 수 있기 때문.
 * 유지보수성이 좋음.
 * 재컴파일/재배포 필요 없음.
