style: 자바와 객체 지향 수정
오타 수정

--- a/3. 자바와 객체 지향.md
+++ b/3. 자바와 객체 지향.md
@@ -118,7 +118,7 @@
 ### 다형성과 T 메모리
 ```
 Animal pingu = new Penguin();
-pungu.showName();
+pingu.showName();
 ```
 pingu 객체 참조 변수는 타입이 Animal 이지만 Animal 객체의 showName()은 Penguin 객체의 showName()에 의해 가려져 있다.
 
